		of the new framework.
20090822	Beginning on a doc/framework.html, describing the new
		framework concepts to end-users.
20090905	Continuing on the dyntrans core: page allocation.
20091207	The dev_ether MAC address can now be read.
20091212	Updating the OpenBSD/landisk install instructions in
		guestoses.html from OpenBSD 4.5 to 4.6.
20091219	Include _GLIBCXX_DEBUG and _GLIBCXX_DEBUG_PEDANTIC defines in
		debug builds, to potentially catch some STL misuses.
		If valgrind is found by the configure script, it is used when
		running 'make test'. If there is any output from valgrind -q
		(i.e. errors), then make test fails.
20100127	Patch from Tassilo Philipp to enable PPC's fabs instruction.
		Patch from Yana to use return value from net_ethernet_rx()
		correctly in dev_ether.c.
20100128	Adding a check (for "make test") to see that delete isn't
		used. Only a few exceptions are allowed.
20100129	Reimplementing the (non-specialized) M88K bsr instruction.
		Continuing on the dyntrans core: page allocation. The basics
		(page allocation and LRU deallocation) have been implemented,
		but not really tested in practice yet.
20100130	Reimplementing the M88K ldcr instruction, and a slow version
		of the st instruction (store 32-bit word).
		Updating guest OS documentation (NetBSD/landisk 4.0.1 to
		5.0.1, NetBSD/pmax 5.0 to 5.0.1, NetBSD/arc 5.0 to 5.0.1,
		NetBSD/cobalt 5.0 to 5.0.1).
		Renaming old testmips to oldtestmips, so that the name
		testmips can be used by the new framework.
20100131	Reimplementing a slow version of the st.d M88K instruction.
		"Quiet mode" is now turned off, if dropping into the debugger,
		both by using -V and by triggering unimplemented instructions.
		The m88k_cpu now takes a creation argument called r31, for the
		initial stack pointer value. (Needed to run the rectangle
		drawing demo, which assumes a valid r31 on startup.)
		Reimplementing the M88K bsr.n instruction, including single-
		stepping scenarios.